# liba429

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  development.md
examples/: main.c
include/: a429.h
include/a429/: bnr.h  encode.h  parity.h  types.h  word.h
src/bnr/: bnr.c
src/core/: a429.c  word.c
src/decode/: decode.c
src/encode/: encode.c
src/parity/: parity.c
tests/: CMakeLists.txt
tests/cases/decode/: decode_mock.h  test_decode_bnr.c
tests/cases/parity/: test_parity.c
tests/unity/: unity.c  unity_config.h
